# softnet_test_task

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  config.py  database.py  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt
alembic/: env.py
alembic/versions/: 2023100501_create_node_and_board_models_d8f5116111df.py
src/notes/: endpoints.py  models.py  schemas.py
tests/: conftest.py  test_boards.py  test_notes.py
