[tool.poetry]
name = "softnet-test-task"
version = "0.1.0"
description = "Test task for Softnet"
authors = ["vlad.fedyayev@gmail.com"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.21"}
alembic = "^1.12.0"
pydantic-settings = "^2.0.3"
black = "^23.9.1"
flake8 = "^6.1.0"
isort = "^5.12.0"
pre-commit = "^3.4.0"
uvicorn = "^0.23.2"
pydantic = {extras = ["email"], version = "^2.4.2"}
pre-commit-hooks = "^4.4.0"
asyncpg = "^0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
